# Subiter_test

./: AGENTS.md  README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
assets/mocks/: inspections.json
docs/: questao_1.cpp  questao_3.cpp  respostas.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/core/: router.dart
lib/core/database/: app_database.dart
lib/core/di/: iod.dart  service_locator.dart
lib/core/errors/: app_exception.dart
lib/core/i18n/: app_localizations.dart
lib/core/navigator/: app_navigator.dart  core_navigator.dart
lib/core/network/: mock_interceptor.dart
lib/modules/activities/data/: activities_repository_impl.dart
lib/modules/activities/presentation/: activities_list_page.dart  activities_list_view_model.dart  activity_registration_page.dart  activity_registration_view_model.dart
lib/modules/companies/: activities_routes.dart
lib/modules/home/: home_screen.dart
lib/modules/inspections/: inspections_routes.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
subiter_test_c_qt/: CMakeLists.txt  main.cpp  mainwindow.cpp  question1.cpp  question1.h  question3.cpp  question3.h
test/: inspection_data_model_test.dart  inspections_viewmodel_test.dart  register_activity_test.dart
tools/: generate_answers_pdf.py
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+31 files in other folders)
